--- a/package.json
+++ b/package.json
@@ -8,13 +8,37 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "browser": {
+    "./backend": false
+  },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@reduxjs/toolkit": "^1.6.1",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
+    "immer": "^8.0.1",
+    "moment": "^2.29.1",
     "next": "11.1.0",
+    "next-redux-wrapper": "^6.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
+    "clsx": "^1.1.1",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.0",
+    "helpers": "^0.0.6",
+    "next-redux-wrapper": "^6.0.2",
+    "prop-types": "^15.7.2",
+    "react-perfect-scrollbar": "^1.5.8",
+    "uuid": "^8.3.2"
   }
 }
